# PimEyes_API

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/application/clients/openai/: http_openai_client.py
app/constants/: constants.py
app/core/: config.py
app/web_interface/routes/generation/: router.py
