[project]
name = "pimeyes"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "alexneupokoev152@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "openai (>=2.29.0,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "boto3 (>=1.42.70,<2.0.0)",
    "pydantic[dotenv] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
